--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint",
     "stylelint": "stylelint \"src/**/*.css\"",
@@ -22,9 +22,10 @@
     "supabase:stop": "supabase stop"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "latest",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
+    "dayjs": "^1.11.9",
     "next": "latest",
     "postcss": "8.4.24",
     "postcss-scss": "^4.0.7",
@@ -38,6 +39,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "cssnano": "^6.0.1",
     "encoding": "^0.1.13",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
