--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "./src/**/*.ts", "./src/**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "next.d.ts", "./src/**/*.ts", "./src/**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "./out/**/*"]
 }
