--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "supabase:stop": "supabase stop"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.66.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
