--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.36.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
