--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.1.0",
     "supabase": "^1.86.2"
+  },
+  "resolutions": {
+    "@supabase/gotrue-js": "2.47.0"
   }
 }
