--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build ",
-    "prebuild": "node prebuild.js",
     "start": "next start",
     "lint": "next lint",
     "stylelint": "stylelint \"src/**/*.css\"",
@@ -23,6 +22,7 @@
     "supabase:stop": "supabase stop"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
     "@sentry/nextjs": "^7.66.0",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "latest",
@@ -37,7 +37,6 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.40.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -59,8 +58,5 @@
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.1.0",
     "supabase": "^1.86.2"
-  },
-  "resolutions": {
-    "@supabase/gotrue-js": "2.47.0"
   }
 }
