--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.6.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
