--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,21 @@
 name: SST workflow
-  on:
-    push
+on: push
+concurrency: merge-${{ github.ref }}
 
-  # concurrency group name ensures concurrent workflow runs wait for any in-progress job to finish
-  concurrency: merge-${{ github.ref }}
-
-  # permission can be added at job level or workflow level    
- permissions:
-   id-token: write   # This is required for requesting the JWT
-   contents: read    # This is required for actions/checkout
-
-   jobs:
-     DeployApp:
-       runs-on: ubuntu-latest
-       steps:
-         - name: Git clone the repository
-           uses: actions/checkout@v3
-        - name: configure aws credentials
-          uses: aws-actions/configure-aws-credentials@v2
-          with:
-            role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHub
-            aws-region: us-east-1
-         - name: Deploy app
-           run: |
-             pnpm sst deploy
+permissions:
+  id-token: write
+  contents: read
+jobs:
+  DeployApp:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v3
+      - name: configure aws credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHub
+          aws-region: us-east-1
+      - name: Deploy app
+        run: |
+          pnpm sst deploy
