--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: SST workflow
 on: push
 concurrency: merge-${{ github.ref }}
-
+env:
+  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 permissions:
   id-token: write
   contents: read
@@ -13,10 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
-        env:
-            AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
         with:
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHub"
+          role-to-assume: "arn:aws:iam::${{ AWS_ACCOUNT_ID }}:role/GitHub"
           aws-region: us-east-1
       - name: Deploy app
         run: |
