--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
 name: SST workflow
 on: push
 concurrency: merge-${{ github.ref }}
-env:
-  AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
 permissions:
   id-token: write
   contents: read
 jobs:
   DeployApp:
+    environment: production
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
@@ -15,7 +14,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: "arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/GitHub"
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHub"
           aws-region: us-east-1
       - name: Deploy app
         run: |
