--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ permissions:
   contents: read
 jobs:
   DeployApp:
-    environment: production
+    environment: Production
     runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
