--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/GitHub
           aws-region: us-east-1
+      - name: pnpm-setup
+        uses: pnpm/action-setup@v2
       - name: Deploy app
         run: |
-          npm sst deploy
+          pnpm sst deploy
