--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "yarn": ">=1.22.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "sst bind next dev",
     "build": "next build ",
     "start": "next start",
     "lint": "next lint",
@@ -57,6 +57,9 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.1.0",
-    "supabase": "^1.86.2"
+    "supabase": "^1.86.2",
+    "sst": "^2.24.24",
+    "aws-cdk-lib": "2.91.0",
+    "constructs": "10.2.69"
   }
 }
