--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,5 @@ jobs:
           aws-region: us-east-1
       - name: Deploy app
         run: |
+          yarn install
           yarn sst deploy
