--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Deploy app
         run: |
           yarn install
-          yarn sst deploy
+          yarn sst deploy --verbose
