--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.9",
-    "next": "latest",
+    "next": "^13.4.19",
     "postcss": "8.4.24",
     "postcss-scss": "^4.0.7",
     "react": "18.2.0",
@@ -58,8 +58,8 @@
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.1.0",
     "supabase": "^1.86.2",
-    "sst": "^2.24.24",
-    "aws-cdk-lib": "2.91.0",
-    "constructs": "10.2.69"
+    "sst": "^2.24.25",
+    "aws-cdk-lib": "2.94.0",
+    "constructs": "10.2.70"
   }
 }
