--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.9",
     "next": "^13.4.19",
+    "open-next": "^2.1.2",
     "postcss": "8.4.24",
     "postcss-scss": "^4.0.7",
     "react": "18.2.0",
@@ -41,6 +42,8 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "aws-cdk-lib": "2.94.0",
+    "constructs": "10.2.70",
     "cssnano": "^6.0.1",
     "encoding": "^0.1.13",
     "eslint": "^8.47.0",
@@ -53,13 +56,11 @@
     "eslint-plugin-typescript-sort-keys": "^2.3.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.2",
+    "sst": "^2.24.25",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-order": "^6.0.3",
     "stylelint-scss": "^5.1.0",
-    "supabase": "^1.86.2",
-    "sst": "^2.24.25",
-    "aws-cdk-lib": "2.94.0",
-    "constructs": "10.2.70"
+    "supabase": "^1.86.2"
   }
 }
